antlr/enter_player/EnterPlayerParser.py
# Generated from ..\antlr\enter_player\EnterPlayer.g4 by ANTLR 4.12.0
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class EnterPlayerParser ( Parser ):

    grammarFileName = "EnterPlayer.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'\\n'", "'Sentimentos:'", "':'", "' '", 
                     "', '" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "ALEGRIA", "TRISTEZA", "RAIVA", 
                      "NOJINHO", "MEDO", "TEXT", "WS" ]

    RULE_mensagem = 0
    RULE_personagemacao = 1
    RULE_nome = 2
    RULE_acao = 3
    RULE_sentimentos = 4
    RULE_sentimento = 5

    ruleNames =  [ "mensagem", "personagemacao", "nome", "acao", "sentimentos", 
                   "sentimento" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    ALEGRIA=6
    TRISTEZA=7
    RAIVA=8
    NOJINHO=9
    MEDO=10
    TEXT=11
    WS=12

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.12.0")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class MensagemContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def sentimentos(self):
            return self.getTypedRuleContext(EnterPlayerParser.SentimentosContext,0)


        def personagemacao(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(EnterPlayerParser.PersonagemacaoContext)
            else:
                return self.getTypedRuleContext(EnterPlayerParser.PersonagemacaoContext,i)


        def getRuleIndex(self):
            return EnterPlayerParser.RULE_mensagem

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMensagem" ):
                listener.enterMensagem(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMensagem" ):
                listener.exitMensagem(self)




    def mensagem(self):

        localctx = EnterPlayerParser.MensagemContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_mensagem)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 15 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 12
                self.personagemacao()
                self.state = 13
                self.match(EnterPlayerParser.T__0)
                self.state = 17 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==11):
                    break

            self.state = 19
            self.match(EnterPlayerParser.T__1)
            self.state = 20
            self.sentimentos()
            self.state = 24
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,1,self._ctx)
            while _alt!=1 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1+1:
                    self.state = 21
                    self.match(EnterPlayerParser.T__0) 
                self.state = 26
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,1,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PersonagemacaoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def nome(self):
            return self.getTypedRuleContext(EnterPlayerParser.NomeContext,0)


        def acao(self):
            return self.getTypedRuleContext(EnterPlayerParser.AcaoContext,0)


        def getRuleIndex(self):
            return EnterPlayerParser.RULE_personagemacao

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPersonagemacao" ):
                listener.enterPersonagemacao(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPersonagemacao" ):
                listener.exitPersonagemacao(self)




    def personagemacao(self):

        localctx = EnterPlayerParser.PersonagemacaoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_personagemacao)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 27
            self.nome()
            self.state = 28
            self.match(EnterPlayerParser.T__2)
            self.state = 29
            self.acao()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NomeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TEXT(self):
            return self.getToken(EnterPlayerParser.TEXT, 0)

        def getRuleIndex(self):
            return EnterPlayerParser.RULE_nome

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNome" ):
                listener.enterNome(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNome" ):
                listener.exitNome(self)




    def nome(self):

        localctx = EnterPlayerParser.NomeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_nome)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 31
            self.match(EnterPlayerParser.TEXT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AcaoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TEXT(self, i:int=None):
            if i is None:
                return self.getTokens(EnterPlayerParser.TEXT)
            else:
                return self.getToken(EnterPlayerParser.TEXT, i)

        def getRuleIndex(self):
            return EnterPlayerParser.RULE_acao

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAcao" ):
                listener.enterAcao(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAcao" ):
                listener.exitAcao(self)




    def acao(self):

        localctx = EnterPlayerParser.AcaoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_acao)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 33
            self.match(EnterPlayerParser.TEXT)
            self.state = 38
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,2,self._ctx)
            while _alt!=1 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1+1:
                    self.state = 34
                    self.match(EnterPlayerParser.T__3)
                    self.state = 35
                    self.match(EnterPlayerParser.TEXT) 
                self.state = 40
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,2,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SentimentosContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def sentimento(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(EnterPlayerParser.SentimentoContext)
            else:
                return self.getTypedRuleContext(EnterPlayerParser.SentimentoContext,i)


        def getRuleIndex(self):
            return EnterPlayerParser.RULE_sentimentos

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSentimentos" ):
                listener.enterSentimentos(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSentimentos" ):
                listener.exitSentimentos(self)




    def sentimentos(self):

        localctx = EnterPlayerParser.SentimentosContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_sentimentos)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 41
            self.sentimento()
            self.state = 46
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,3,self._ctx)
            while _alt!=1 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1+1:
                    self.state = 42
                    self.match(EnterPlayerParser.T__4)
                    self.state = 43
                    self.sentimento() 
                self.state = 48
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,3,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SentimentoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ALEGRIA(self):
            return self.getToken(EnterPlayerParser.ALEGRIA, 0)

        def TRISTEZA(self):
            return self.getToken(EnterPlayerParser.TRISTEZA, 0)

        def RAIVA(self):
            return self.getToken(EnterPlayerParser.RAIVA, 0)

        def NOJINHO(self):
            return self.getToken(EnterPlayerParser.NOJINHO, 0)

        def MEDO(self):
            return self.getToken(EnterPlayerParser.MEDO, 0)

        def getRuleIndex(self):
            return EnterPlayerParser.RULE_sentimento

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSentimento" ):
                listener.enterSentimento(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSentimento" ):
                listener.exitSentimento(self)




    def sentimento(self):

        localctx = EnterPlayerParser.SentimentoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_sentimento)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 49
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 1984) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





